@@ -1,3 +1,12 @@
+2006-10-20  Carlos Garcia Campos  <carlosgc@gnome.org>
+
+	* configure.in:
+	* src/Makefile.am:
+	* src/main.c:
+
+	Make libgnomeui an optional dependency enabled by default when
+	available
+
 2006-10-08  Carlos Garcia Campos  <carlosgc@gnome.org>
 
 	* src/buoh-comic-manager-date.c:
